--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -18,7 +18,7 @@
         </nav>
         <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-      <img style="width: 130px;" src="profile.jpg"  >
+      <img class="rounded-circle" style="width: 130px;" src="profile.jpg"  >
       <div class="navbar-right">
         <ul class="nav">
           <li class="nav-item d-none d-lg-block ">
@@ -144,7 +144,8 @@
     <div class="container-fluid">
       <h1 style="color: #0000b3; margin: 5%;">Blog</h1>
       <p style="text-align: center; color: #0000b3; margin: 5%;">A space for sharing all things body image and eating disorders related. All blog entries are written by our staff, those with a lived experience and professionals.</p>
-    </div>   
+    </div>  
+      
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4 col-sm-6 blogimg1">
