--- a/Hackathon/donate.html
+++ b/Hackathon/donate.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar">
     <a class="navbar-brand">
-      <img style="width: 200px" src="profile.jpg">
+      <img class="rounded-circle" style="width: 200px" src="profile.jpg">
     </a>
     <a style="color: #0000b3;" href="index.html"><h3>Back To Home Page ></h3></a>
   </nav>
