--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -18,7 +18,7 @@
         </nav>
 		<nav class="navbar navbar-expand-sm">
 			<div class="container-fluid">
-			<img style="width: 130px;" src="profile.jpg"  >
+			<img class="rounded-circle" style="width: 130px;" src="profile.jpg">
 			<div class="navbar-right">
 				<ul style="text-decoration: none;" class="nav">
 					<li class="nav-item d-none d-lg-block ">
@@ -937,12 +937,21 @@
 			
 			</div>
 		</nav>
-	<div style="border-radius: 10px;" class="container-fluid backgroundimg">
-		<h1 class="imp">Some things has to change as per present Situatons</h1>
-		<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</p>
-		<a href="#"><button type="button" class="btn btn-primary" >How to Start ?</button></a>
-		<a href="#"><button type="button" class="btn btn-primary" >About our Project</button></a>
+	<div style="border-radius: 10px;" class="container-fluid navigation">
+		<img style="width: 100%" src="happyfamily.jpg">
+		<div class="top-left d-none d-md-block">
+			<div class="container-fluid">
+				<h1 style="color: black; font-size: 1.5em;">SOME THINGS HAS TO CHANGE</h1>
+		        <p>Information regarding our WEB PAGE </p>
+		        <a href="#"><button type="button" class="btn btn-dark" >How to Start ?</button></a>
+		        <a href="#"><button type="button" class="btn btn-dark" >About our Project</button></a>
+			</div>
+		</div>
 	</div>
+	<div class="d-md-none">
+			<h1 style="color: black; font-size: 1.2em">SOME THINGS HAS TO CHANGE</h1>
+			<p>INFO regarding our website</p>
+		</div>
 	<div class="container text-center">
 		<h2> We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</h2>
 		<a href="#"><button type="button" class="btn btn-primary" >How to Start ?</button></a>
