--- a/Hackathon/yourstories.html
+++ b/Hackathon/yourstories.html
@@ -18,7 +18,7 @@
         </nav>
         <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-      <img style="width: 130px;" src="profile.jpg"  >
+      <img class="rounded-circle" style="width: 130px;" src="profile.jpg"  >
       <div class="navbar-right">
         <ul class="nav">
           <li class="nav-item d-none d-lg-block ">
