--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -77,63 +77,317 @@
           </li>
         </ul>
         <ul class="nav">
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample" href="">UNDERSTANDING ABUSE |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE |</a>
             <div class="collapse" id="understandingabuseExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+              <div>
+                <a href="" style="color: #0000b3;">Abuse Defined</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Why do people abuse ?</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Why do people stay in abusive relationships ?</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Pregnancy & Abuse</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Abuse & Immigrants</a>
+                <hr>
+              </div>
                         </div>
           </li>  
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample" href="">REPORT ISSUE |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUE |</a>
             <div class="collapse" id="reportissueExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+                            <div>
+                <a href="" style="color: #0000b3;">H</a>
+              </div>
                         </div>
           </li>
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample" href="">GET SUPPORT |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT |</a>
             <div class="collapse" id="getsupportExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+                           <div>
+                <a href="" style="color: #0000b3;">Path to Safety</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Help for friends and family</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Help for survivors</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Tech & Social Media Safety</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Legal Help</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">What to expect when you contact the hotline</a>
+                <hr>
+              </div>
                         </div>
           </li>
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample" href="">HEALTHY RELATIONSHIPS |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS |</a>
             <div class="collapse" id="healthyrelationshipsExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+                            <div>
+                <a href="" style="color: #0000b3;">Relationship Spectrum</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Setting Boundaries</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Communication</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Trust</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Equality</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Consent</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Healthy Conflict Resolution</a>
+                <hr>
+              </div>
                         </div>
           </li>
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample" href="">AWARENESS |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS |</a>
             <div class="collapse" id="awarenessExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+                            <div>
+                <a href="" style="color: #0000b3;">H</a>
+              </div>
                         </div>
           </li>
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample" href="">WHO WE ARE |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE |</a>
             <div class="collapse" id="whoweareExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+                            <div>
+                <a href="" style="color: #0000b3;">Our History</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Strategic Plan</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Board of Directors</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Our Advocates</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Impact Reports</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">State&Territory Reports</a>
+                <hr>
+              </div>
                         </div>
           </li>
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample" href="">GET  INVOLVED |</a>
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED |</a>
             <div class="collapse" id="getinvolvedExample">
-                            <div class="card card-body">
-                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                             </div>
+              <div>
+                <a href="donate.html" style="color: #0000b3;">Donate</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Careers</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Sponsors&Partners</a>
+                <hr>
+              </div>
                         </div>
           </li>
-          <li class="nav-item d-none d-lg-block">
+          <li class="nav-item d-none d-md-block">
+            <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+        <ul class="d-md-none">
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
+            <div class="collapse" id="understandingabuseExample">
+              <div>
+                <a href="" style="color: #0000b3;">Abuse Defined</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Why do people abuse ?</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Why do people stay in abusive relationships ?</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Pregnancy & Abuse</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Abuse & Immigrants</a>
+                <hr>
+              </div>
+                        </div>
+                        <hr>
+          </li>  
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUE</a>
+            <div class="collapse" id="reportissueExample">
+                           <div>
+                <a href="" style="color: #0000b3;">H</a>
+              </div>
+                        </div>
+                        <hr>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT</a>
+            <div class="collapse" id="getsupportExample">
+                            <div>
+                <a href="" style="color: #0000b3;">Path to Safety</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Help for friends and family</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Help for survivors</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Tech & Social Media Safety</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Legal Help</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">What to expect when you contact the hotline</a>
+                <hr>
+              </div>
+                        </div>
+                        <hr>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS</a>
+            <div class="collapse" id="healthyrelationshipsExample">
+                            <div>
+                <a href="" style="color: #0000b3;">Relationship Spectrum</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Setting Boundaries</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Communication</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Trust</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Equality</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Consent</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Healthy Conflict Resolution</a>
+                <hr>
+              </div>
+                        </div>
+                        <hr>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS</a>
+            <div class="collapse" id="awarenessExample">
+                            <div>
+                <a href="" style="color: #0000b3;">H</a>
+              </div>
+                        </div>
+                        <hr>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
+            <div class="collapse" id="whoweareExample">
+                            <div>
+                <a href="" style="color: #0000b3;">Our History</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Strategic Plan</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Board of Directors</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Our Advocates</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Impact Reports</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">State&Territory Reports</a>
+                <hr>
+              </div>
+                        </div>
+                        <hr>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
+            <div class="collapse" id="getinvolvedExample">
+              <div>
+                <a href="donate.html" style="color: #0000b3;">Donate</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Careers</a>
+                <hr>
+              </div>
+              <div>
+                <a href="" style="color: #0000b3;">Sponsors&Partners</a>
+                <hr>
+              </div>
+                        </div>
+                        <hr>
+          </li>
+          <li class="nav-item">
             <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
@@ -143,7 +397,7 @@
     </nav>
     <div class="container-fluid">
       <h1 style="color: #0000b3; margin: 5%;">Blog</h1>
-      <p style="text-align: center; color: #0000b3; margin: 5%;">A space for sharing all things body image and eating disorders related. All blog entries are written by our staff, those with a lived experience and professionals.</p>
+      <p style="text-align: center; color: #0000b3; margin: 5%;">Provides a platform to read inspiring stories of the survivors, get tips for the road ahead and learn about recovery</p>
     </div>  
       
     <div class="container-fluid">
