--- a/Hackathon/donate.html
+++ b/Hackathon/donate.html
@@ -15,13 +15,113 @@
     <a class="navbar-brand">
       <img class="rounded-circle" style="width: 200px" src="profile.jpg">
     </a>
-    <a style="color: #0000b3;" href="index.html"><h3>Back To Home Page ></h3></a>
+    <a style="color: #0000b3;" href="index.html">Back To Home Page ></a>
   </nav>
   <img style="width: 100% ;" src="donatepic.jpg">
   <div class="container">
     <h2>DONATE TO US!</h2>
     <h5 style="text-align: center;">YOU CAN BRING <strong>HOPE</strong> TO SOME PEOPLE WHO ARE BEING AFFECTED</h5>
     <p style="text-align: center;">Your donation helps us to fund various vital programs and help people</p>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <a style="color: black;" href="##">Hello</a>
+      </div>
+      <div class="col-md-3">
+        <a style="color: black;" href="##">Hello</a>
+      </div>
+      <div class="col-md-3">
+        <a style="color: black;" href="##">Hello</a>
+      </div>
+      <div class="col-md-3">
+        <a style="color: black;" href="##">Hello</a>
+      </div>
+    </div>
+  </div>
+  <div class="container" style="text-align: center;">
+    <h2>Your Donation</h2>
+    <h4>Donation Amount*</h4>
+    <div>
+        <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optradio"><i class="fa fa-inr" aria-hidden="true"></i>1000
+        </label>
+    </div>
+    <div>
+        <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optradio"><i class="fa fa-inr" aria-hidden="true"></i>1500
+        </label>
+    </div>
+    <div>
+        <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optradio"><i class="fa fa-inr" aria-hidden="true"></i>2000
+        </label>
+    </div>
+    <div>
+        <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optradio">Other
+              <form class="form-inline"><input type="text" name="amount" placeholder="Enter Amount"></form>
+        </label>
+    </div>
+    <p>
+      <div class="form-group">
+      <label for="sel1"><h4>Donation Frequency*</h4></label>
+      <select class="form-control" id="sel1" name="sellist1">
+        <option>One Time</option>
+        <option>Weekly</option>
+        <option>Monthly</option>
+      </select>
+      </div>
+    </p>
+    <p>
+      <div class="form-group">
+      <label for="sel1"><h4>Donation Type*</h4></label>
+      <select class="form-control" id="sel2" name="sellist2">
+        <option>General Funding</option>
+        <option>FundRising</option>
+        <option>Capital Fund</option>
+      </select>
+      </div>
+    </p>
+    <h2>Your Personal Details</h2>
+    <div class="container-fluid">
+        <p style="margin: 10px;">
+          <input style="width: 100%;" type="text" name="username" placeholder="Enter Full Name">
+        </p>
+        <div class="row">
+          <p class="col-md-3">
+            <input style="width: 100%;" type="text" name="username" placeholder="Mobile Number">
+          </p>
+          <p class="col-md-4">
+            <input style="width: 100%;" type="text" name="username" placeholder="Enter City">
+          </p>
+          <p class="col-md-5">
+            <input style="width: 100%;" type="text" name="username" placeholder="Enter State">
+          </p>
+        </div>
+        <p>
+          <input style="width: 100%;" type="text" name="username" placeholder="Enter Email">
+        </p>
+    </div>
+    <h2>Payment Details</h2>
+    <div class="container-fluid">
+      <div>We only accept payments through Cards (Credit/Debit) </div>
+      <div>Click Submit to enter your card details</div>
+      <div><a href="#"><button type="button" class="btn btn-primary">Submit</button></a></div>
+    </div>
+  </div>
+  <div class="container">
+    <a style="color: #0000b3; font-size: 1.5em; text-align: center;" data-toggle="collapse" href="#first" role="button" aria-expanded="false" aria-controls="first">HOW ARE WE USING OUR FUNDS ? <i class="fa fa-chevron-down" aria-hidden="true"></i> </a>
+    <div class="collapse" id="first">
+      <ul>
+        <li>
+          1st
+        </li>
+        <li>
+          2nd
+        </li>
+      </ul>
+    </div>
   </div>
 <footer>
   <div class="container">
