--- a/Hackathon/donate.html
+++ b/Hackathon/donate.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar">
     <a class="navbar-brand">
-      <img class="rounded-circle" style="width: 200px" src="profile.jpg">
+      <a href="index.html"><img class="rounded-circle" style="width: 150px;" src="profile.jpg"></a>
     </a>
     <a style="color: #0000b3;" href="index.html">Back To Home Page ></a>
   </nav>
@@ -123,28 +123,6 @@
       </ul>
     </div>
   </div>
-<footer>
-  <div class="container">
-    <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="#">Privacy Policy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="#">Terms of Use</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
-          </li>
-        </ul>
-  </div>
-  <p style="text-align: center; color: white"> &copy; Tech Titans <a href="tel:9294649999" style="color: white;">Contact us !</a></p>
-</footer>
     <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </body>
