--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -224,7 +224,7 @@
                         </div>
 					</li>
 					<li class="nav-item d-none d-md-block">
-						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+						<a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
 					</li>
 				</ul>
 				<ul style="list-style-type:none;" class="d-md-none">
@@ -385,7 +385,7 @@
                         <hr>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+						<a style="color: #0000b3; text-align: center; " class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
 					</li>
 				</ul>
 			</div>
