--- a/Hackathon/newsandmedia.html
+++ b/Hackathon/newsandmedia.html
@@ -237,7 +237,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
         <ul style="list-style-type:none;" class="d-md-none">
@@ -398,7 +398,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
       </div>
