--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -21,35 +21,35 @@
       <a href="index.html"><img class="rounded-circle" style="width: 150px;" src="profile.jpg"></a>
       <div class="navbar-right">
         <ul class="nav">
-          <li class="nav-item d-none d-lg-block ">
-            <a class="nav-link" href="index.html"><i class="fa fa-home"></i></a>
+          <li class="nav-item d-none d-lg-block">
+            <a class="drop nav-link" href="index.html"><i class="fa fa-home"></i></a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="blog.html">BLOG</a>
+            <a class="drop nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
+            <a class="drop nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="#">RESOURCES</a>
+            <a class="drop nav-link" href="#">RESOURCES</a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="yourstories.html">YOUR STORIES</a>
+            <a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
           </li>
           <li class="nav-item">
             <a href="donate.html" type="button" class="btn btn-success" >DONATE</a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
             <a href="#" type="button"  class="btn btn-primary d-none d-sm-block">Need Help</a>
@@ -75,7 +75,7 @@
         </ul>
         <ul class="nav">
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
             <div class="collapse" id="understandingabuseExample">
               <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Abuse Defined</a>
@@ -100,7 +100,7 @@
                         </div>
           </li>  
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES </a>
             <div class="collapse" id="reportissueExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -108,7 +108,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT </a>
             <div class="collapse" id="getsupportExample">
                            <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Path to Safety</a>
@@ -137,7 +137,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS </a>
             <div class="collapse" id="healthyrelationshipsExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Relationship Spectrum</a>
@@ -170,7 +170,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS </a>
             <div class="collapse" id="awarenessExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -178,7 +178,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE </a>
             <div class="collapse" id="whoweareExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Our History</a>
@@ -207,7 +207,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED </a>
             <div class="collapse" id="getinvolvedExample">
               <div style="text-align: center;">
                 <a href="donate.html" style="color: #0000b3;">Donate</a>
@@ -224,12 +224,12 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
         <ul style="list-style-type:none;" class="d-md-none">
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
             <div class="collapse" id="understandingabuseExample">
               <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Abuse Defined</a>
@@ -255,7 +255,7 @@
                         <hr>
           </li>  
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES</a>
             <div class="collapse" id="reportissueExample">
                            <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -264,7 +264,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT</a>
             <div class="collapse" id="getsupportExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Path to Safety</a>
@@ -294,7 +294,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS</a>
             <div class="collapse" id="healthyrelationshipsExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Relationship Spectrum</a>
@@ -328,7 +328,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS</a>
             <div class="collapse" id="awarenessExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -337,7 +337,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
             <div class="collapse" id="whoweareExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Our History</a>
@@ -367,7 +367,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
             <div class="collapse" id="getinvolvedExample">
               <div style="text-align: center;">
                 <a href="donate.html" style="color: #0000b3;">Donate</a>
@@ -385,7 +385,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
       </div>
