--- a/Hackathon/newsandmedia.html
+++ b/Hackathon/newsandmedia.html
@@ -35,34 +35,34 @@
       <div class="navbar-right">
         <ul style="text-decoration: none;" class="nav">
           <li class="nav-item d-none d-lg-block ">
-            <a class="nav-link" href="index.html"><i class="fa fa-home"></i></a>
+            <a class="drop nav-link" href="index.html"><i class="fa fa-home"></i></a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="blog.html">BLOG</a>
+            <a class="drop nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
+            <a class="drop nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="#">RESOURCES</a>
+            <a class="drop nav-link" href="#">RESOURCES</a>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a class="nav-link" href="yourstories.html">YOUR STORIES</a>
+            <a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
           </li>
           <li class="nav-item">
             <a href="donate.html" type="button" class="btn btn-success" >DONATE</a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
             <a href="#" type="button"  class="btn btn-primary d-none d-sm-block">Need Help</a>
@@ -88,7 +88,7 @@
         </ul>
         <ul class="nav">
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
             <div class="collapse" id="understandingabuseExample">
               <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Abuse Defined</a>
@@ -113,7 +113,7 @@
                         </div>
           </li>  
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES </a>
             <div class="collapse" id="reportissueExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -121,7 +121,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT </a>
             <div class="collapse" id="getsupportExample">
                            <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Path to Safety</a>
@@ -150,7 +150,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS </a>
             <div class="collapse" id="healthyrelationshipsExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Relationship Spectrum</a>
@@ -183,7 +183,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS </a>
             <div class="collapse" id="awarenessExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -191,7 +191,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE </a>
             <div class="collapse" id="whoweareExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Our History</a>
@@ -220,7 +220,7 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED </a>
             <div class="collapse" id="getinvolvedExample">
               <div style="text-align: center;">
                 <a href="donate.html" style="color: #0000b3;">Donate</a>
@@ -237,12 +237,12 @@
                         </div>
           </li>
           <li class="nav-item d-none d-md-block">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
         <ul style="list-style-type:none;" class="d-md-none">
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
             <div class="collapse" id="understandingabuseExample">
               <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Abuse Defined</a>
@@ -268,7 +268,7 @@
                         <hr>
           </li>  
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUES</a>
             <div class="collapse" id="reportissueExample">
                            <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -277,7 +277,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT</a>
             <div class="collapse" id="getsupportExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Path to Safety</a>
@@ -307,7 +307,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS</a>
             <div class="collapse" id="healthyrelationshipsExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Relationship Spectrum</a>
@@ -341,7 +341,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS</a>
             <div class="collapse" id="awarenessExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">H</a>
@@ -350,7 +350,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
             <div class="collapse" id="whoweareExample">
                             <div style="text-align: center;">
                 <a href="" style="color: #0000b3;">Our History</a>
@@ -380,7 +380,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
             <div class="collapse" id="getinvolvedExample">
               <div style="text-align: center;">
                 <a href="donate.html" style="color: #0000b3;">Donate</a>
@@ -398,7 +398,7 @@
                         <hr>
           </li>
           <li class="nav-item">
-            <a style="color: #0000b3; text-align: center;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a style="color: #0000b3; text-align: center;" class="drop nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
       </div>
