--- a/Hackathon/newsandmedia.html
+++ b/Hackathon/newsandmedia.html
@@ -24,11 +24,11 @@
   <link rel = "icon" href = "profile.jpg" type = "image/x-icon">
 </head>
 <body>
-    <nav class="navbar sticky-top ">
-    <div class="alert alert-primary text-center">
+    <div class="navbar fixed-top">
+    <div style="width: 100%;" class="alert alert-primary text-center">
             <strong>Talk to Someone now!</strong> Call our Helpline on <a href="tel:9294649999" class="alert-link">Here.</a>You can also <a href="chat.html" class="alert-link" target="_blank"> Chat online</a>,<a href="skype:live:sabbellaputrareddy?call" class="alert-link"> Videocall</a> or <a href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link"> Email</a>
         </div> 
-        </nav>
+        </div>
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
       <a href="index.html"><img class="rounded-circle" style="width: 150px;" src="profile.jpg"></a>
