--- a/Practice/index.html
+++ b/Practice/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 		<div class="navbar fixed-top">
-		<div style="width: 100%;" class="alert alert-primary text-center">
-            <strong>Talk to Someone now!</strong> Call our Helpline on <a href="tel:9294649999" class="alert-link">Here.</a>You can also <a href="chat.html" class="alert-link" target="_blank"> Chat online</a>,<a href="skype:live:sabbellaputrareddy?call" class="alert-link"> Videocall</a> or <a href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link"> Email</a>
+		<div style="width: 100%; background-color: #0000b3; color: white;" class="alert text-center">
+            <strong>Talk to Someone now!</strong> Call our Helpline on <a style="color: #29abe2;" href="tel:9294649999" class="alert-link">Here</a>.You can also <a style="color: #29abe2;" href="chat.html" class="alert-link" target="_blank">Chat online</a>,<a style="color: #29abe2;" href="skype:live:sabbellaputrareddy?call" class="alert-link">Videocall</a> or <a style="color: #29abe2;" href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link">Email</a>
         </div> 
         </div>
 		<nav style="margin-top: 90px;" class="navbar navbar-expand-sm">
@@ -37,7 +37,7 @@
 						<a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
 					</li>
 					<li class="nav-item">
-						<a href="donate.html" type="button" class="btn btn-success" >DONATE</a>
+						<a href="donate.html" type="button" style="background-color: #33a395; color: white;" class="btn" >DONATE</a>
 					</li>
 					<li class="nav-item">
 						<a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -52,13 +52,13 @@
 						<a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="#" type="button"  class="btn btn-primary d-none d-sm-block">Need Help</a>
+						<a href="#" style="background-color: #0000b3; color: white;" type="button"  class="btn d-none d-sm-block">Need Help</a>
 					</li>
 					<li class="nav-item">
 						<div class="dropdown">
-  <a type="button" class="btn btn-primary dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i></a>
+  <a style="background-color: #33a395; color: white;" type="button" class="btn dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i></a>
   <div class="dropdown-menu dropdown-menu-right">
-  	<a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
+  	<a href="#" style="text-align: right;" type="button" class="btn btn-primary d-sm-none">Need Help</a>
   	<div class="dropdown-divider d-sm-none"></div>
     <a class="dropdown-item active text-center" href="index.html">HOME</a>
     <div class="dropdown-divider "></div>
@@ -392,21 +392,45 @@
 			
 			</div>
 		</nav>
-	<div style="border-radius: 10px;" class="container-fluid navigation">
-		<img style="width: 100%" src="happyfamily.jpg">
-		<div class="top-left d-none d-md-block">
-			<div class="container-fluid">
-				<h1 style="color: black; font-size: 1.5em;">SOME THINGS HAS TO CHANGE</h1>
-		        <p>Information regarding our WEB PAGE </p>
-		        <a href="#"><button type="button" class="btn btn-dark" >How to Start ?</button></a>
-		        <a href="#"><button type="button" class="btn btn-dark" >About our Project</button></a>
-			</div>
-		</div>
+	<div style="border-radius: 10px;" class="container-fluid">
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="happyfamily1.jpg" alt="First slide">
+            <div class="carousel-caption">
+      	      <h3>Some Things Has To Change</h3>
+      	      <p>Hi</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="happyfamily2.jpg" alt="Second slide">
+             <div class="carousel-caption">
+       	      <h3>Some Things Has To Change</h3>
+       	      <p>Hi</p>
+             </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
+             <div class="carousel-caption">
+             	<h3>Some Things Has To Change</h3>
+             	<p>Hi</p>
+             </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
 	</div>
-	<div class="d-md-none">
-			<h1 style="color: black; font-size: 1.2em">SOME THINGS HAS TO CHANGE</h1>
-			<p>INFO regarding our website</p>
-		</div>
 	<div class="container text-center">
 		<h2 style="color: #0000b3;"> We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</h2>
 		<a href="#"><button type="button" class="btn btn-primary" >How to Start ?</button></a>
@@ -447,44 +471,9 @@
     		</div>
     	</div>
     </div>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="profile.jpg" alt="First slide">
-      <div class="carousel-caption">
-      	<h3>Hi Guys </h3>
-      	<p>heheehyhhhbdcsh</p>
-      </div>
+    <div class="container">
+    	<img src="happyfamily2.jpg">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="profile.jpg" alt="Second slide">
-       <div class="carousel-caption">
-       	<h3>Hi Guys </h3>
-       	<p>heheehyhhhbdcsh</p>
-       </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="profile.jpg" alt="Third slide">
-       <div class="carousel-caption">
-       	<h3>Hi Guys </h3>
-       	<p>heheehyhhhbdcsh</p>
-       </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
