--- a/Practice/newsandmedia.html
+++ b/Practice/newsandmedia.html
@@ -50,7 +50,7 @@
             <a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
           </li>
           <li class="nav-item">
-            <a href="donate.html" type="button" class="btn btn-success" >DONATE</a>
+            <a href="donate.html" type="button" style="background-color: #33a395; color: white;" class="btn" >DONATE</a>
           </li>
           <li class="nav-item">
             <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
