--- a/Practice/yourstories.html
+++ b/Practice/yourstories.html
@@ -37,7 +37,7 @@
             <a class="drop nav-link" href="yourstories.html">YOUR STORIES</a>
           </li>
           <li class="nav-item">
-            <a href="donate.html" type="button" class="btn btn-success" >DONATE</a>
+            <a href="donate.html" type="button" style="background-color: #33a395; color: white;" class="btn" >DONATE</a>
           </li>
           <li class="nav-item">
             <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -56,7 +56,7 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-  <a  type="button" class="btn btn-primary dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i></a>
+  <a type="button" class="btn dropdown-toggle d-block d-lg-none nodrop" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i></a>
   <div class="dropdown-menu dropdown-menu-right">
     <a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
     <div class="dropdown-divider d-sm-none"></div>
