--- a/Practice/index.html
+++ b/Practice/index.html
@@ -471,8 +471,8 @@
     		</div>
     	</div>
     </div>
-    <div class="container">
-    	<img src="happyfamily2.jpg">
+    <div class="container-fluid">
+    	<img style="width: 100%;" src="happyfamily2.jpg">
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
