--- a/Practice/blog.html
+++ b/Practice/blog.html
@@ -56,7 +56,7 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-  <a  type="button" class="btn btn-primary dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i></a>
+  <a style="background-color: #33a395; color: white;" type="button" class="btn dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i></a>
   <div class="dropdown-menu dropdown-menu-right">
     <a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
     <div class="dropdown-divider d-sm-none"></div>
