--- a/Practice/newsandmedia.html
+++ b/Practice/newsandmedia.html
@@ -25,9 +25,9 @@
 </head>
 <body>
     <div class="navbar fixed-top">
-    <div style="width: 100%;" class="alert alert-primary text-center">
-            <strong>Talk to Someone now!</strong> Call our Helpline on <a href="tel:9294649999" class="alert-link">Here.</a>You can also <a href="chat.html" class="alert-link" target="_blank"> Chat online</a>,<a href="skype:live:sabbellaputrareddy?call" class="alert-link"> Videocall</a> or <a href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link"> Email</a>
-        </div> 
+    <div style="width: 100%; background-color: #0000b3; color: white;" class="alert text-center">
+            <strong>Talk to Someone now!</strong> Call our Helpline on <a style="color: #29abe2;" href="tel:9294649999" class="alert-link">Here</a>.You can also <a style="color: #29abe2;" href="chat.html" class="alert-link" target="_blank">Chat online</a>,<a style="color: #29abe2;" href="skype:live:sabbellaputrareddy?call" class="alert-link">Videocall</a> or <a style="color: #29abe2;" href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link">Email</a>
+        </div>  
         </div>
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
